:bug: Fix problem with exports layout

--- a/frontend/src/app/main/ui/export.scss
+++ b/frontend/src/app/main/ui/export.scss
@@ -201,6 +201,7 @@
             img,
             svg {
               object-fit: contain;
+              max-height: $s-40;
             }
           }
         }
