--- a/frontend/resources/styles/main-default.scss
+++ b/frontend/resources/styles/main-default.scss
@@ -23,6 +23,7 @@
 @import "common/dependencies/z-index";
 @import "common/dependencies/highlightjs-theme";
 
+@import "animate";
 @import "common/refactor/color-defs.scss";
 @import "common/refactor/themes.scss";
 @import "common/refactor/design-tokens.scss";
