--- a/frontend/src/app/main/ui/dashboard/grid.scss
+++ b/frontend/src/app/main/ui/dashboard/grid.scss
@@ -170,7 +170,7 @@
   width: $s-32;
   height: $s-32;
   background-color: $da-tertiary;
-  border-radius: 50%;
+  border-radius: $br-circle;
   color: $db-secondary;
   font-size: $fs-16;
   display: flex;
