--- a/frontend/src/app/main/ui/dashboard/comments.scss
+++ b/frontend/src/app/main/ui/dashboard/comments.scss
@@ -85,17 +85,17 @@
 }
 
 .dropdown {
+  @include menuShadow;
   background-color: $db-tertiary;
   border-radius: $br-8;
   border: $s-1 solid transparent;
   bottom: $s-4;
-  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
   height: 40vh;
   max-height: $s-480;
   min-height: $s-200;
   position: absolute;
   width: 100%;
-  z-index: 12;
+  z-index: $z-index-3;
 
   hr {
     margin: 0;
