--- a/frontend/src/app/main/ui/settings.scss
+++ b/frontend/src/app/main/ui/settings.scss
@@ -10,8 +10,8 @@
 .dashboard {
   background-color: $db-primary;
   display: grid;
-  grid-template-rows: 50px 1fr;
-  grid-template-columns: 40px 256px 1fr;
+  grid-template-rows: $s-48 1fr;
+  grid-template-columns: $s-40 $s-256 1fr;
   height: 100vh;
 }
 
@@ -20,7 +20,7 @@
   flex-direction: column;
   position: relative;
   grid-row: 1 / span 2;
-  padding: 1rem 1rem 0 0;
+  padding: $s-16 $s-16 0 0;
 }
 
 .dashboard-container {
@@ -54,24 +54,24 @@
 }
 
 .form-container {
-  width: 800px;
-  margin: 50px auto 2rem 120px;
+  width: $s-800;
+  margin: $s-48 auto $s-32 $s-120;
   display: flex;
-  max-width: 368px;
+  max-width: $s-368;
   width: 100%;
 
   &.two-columns {
-    max-width: 536px;
+    max-width: $s-520;
     justify-content: space-between;
     flex-direction: row;
   }
 
   h2 {
-    margin-bottom: 1rem;
+    margin-bottom: $s-16;
   }
 
   form {
-    width: 468px;
+    width: $s-468;
 
     .custom-input,
     .custom-select {
@@ -80,26 +80,26 @@
         position: relative;
         text-transform: uppercase;
         color: $df-primary;
-        font-size: 11px;
-        margin-bottom: 12px;
-        margin-left: -4px;
+        font-size: $fs-11;
+        margin-bottom: $s-12;
+        margin-left: calc(-1 * $s-4);
       }
       input,
       select {
         background-color: $db-tertiary;
-        border-radius: 8px;
+        border-radius: $s-8;
         border-color: transparent;
         color: $df-primary;
-        padding: 0 15px;
+        padding: 0 $s-16;
         &:focus {
-          outline: 1px solid $da-primary;
+          outline: $s-1 solid $da-primary;
         }
         ::placeholder {
           color: $df-secondary;
         }
       }
       .help-icon {
-        bottom: 12px;
+        bottom: $s-12;
         top: auto;
         svg {
           fill: $df-secondary;
@@ -114,30 +114,30 @@
       }
       .input-container {
         background-color: $db-tertiary;
-        border-radius: 8px;
+        border-radius: $s-8;
         border-color: transparent;
-        margin-top: 22px;
+        margin-top: $s-24;
         .main-content {
           label {
             position: absolute;
-            top: -24px;
+            top: calc(-1 * $s-24);
           }
           span {
             color: $df-primary;
           }
         }
         &:focus {
-          border: 1px solid $da-primary;
+          border: $s-1 solid $da-primary;
         }
       }
       textarea {
-        border-radius: 8px;
-        padding: 12px 14px;
+        border-radius: $s-8;
+        padding: $s-12 $s-16;
         background-color: $db-tertiary;
         color: $df-primary;
         border: none;
         &:focus {
-          outline: 1px solid $da-primary;
+          outline: $s-1 solid $da-primary;
         }
       }
     }
@@ -146,7 +146,7 @@
       color: $df-primary;
     }
     .field-title:not(:first-child) {
-      margin-top: 64px;
+      margin-top: $s-64;
     }
 
     .field-text {
@@ -155,7 +155,7 @@
     button,
     .btn-secondary {
       width: 100%;
-      font-size: 11px;
+      font-size: $fs-11;
       text-transform: uppercase;
       background-color: $db-tertiary;
       color: $df-primary;
@@ -169,21 +169,21 @@
     }
   }
   .links {
-    margin-top: 12px;
+    margin-top: $s-12;
   }
 }
 
 .profile-form {
   display: flex;
   flex-direction: column;
-  max-width: 368px;
+  max-width: $s-368;
   width: 100%;
 
   .newsletter-subs {
-    border-bottom: 1px solid $df-secondary;
-    border-top: 1px solid $df-secondary;
-    padding: 30px 0;
-    margin-bottom: 31px;
+    border-bottom: $s-1 solid $df-secondary;
+    border-top: $s-1 solid $df-secondary;
+    padding: $s-32 0;
+    margin-bottom: $s-32;
 
     .newsletter-title {
       font-family: "worksans", sans-serif;
@@ -195,15 +195,15 @@
       font-family: "worksans", sans-serif;
       color: $db-primary;
       font-size: $fs-12;
-      margin-right: -17px;
-      margin-bottom: 13px;
+      margin-right: calc(-1 * $s-16);
+      margin-bottom: $s-12;
     }
 
     .info {
       font-family: "worksans", sans-serif;
       color: $df-secondary;
       font-size: $fs-12;
-      margin-bottom: 8px;
+      margin-bottom: $s-8;
     }
 
     .input-checkbox label {
@@ -215,28 +215,28 @@
 .avatar-form {
   display: flex;
   flex-direction: column;
-  width: 120px;
-  min-width: 120px;
+  width: $s-120;
+  min-width: $s-120;
 
   img {
     border-radius: 50%;
     flex-shrink: 0;
-    height: 120px;
+    height: $s-120;
     margin-right: $s-16;
-    width: 120px;
+    width: $s-120;
   }
 
   .image-change-field {
     position: relative;
-    width: 120px;
-    height: 120px;
+    width: $s-120;
+    height: $s-120;
 
     .update-overlay {
       opacity: 0;
       cursor: pointer;
       position: absolute;
-      width: 121px;
-      height: 121px;
+      width: $s-120;
+      height: $s-120;
       border-radius: 50%;
       font-size: $fs-24;
       color: $df-primary;
@@ -247,8 +247,8 @@
     }
 
     input[type="file"] {
-      width: 120px;
-      height: 120px;
+      width: $s-120;
+      height: $s-120;
       position: absolute;
       opacity: 0;
       cursor: pointer;
@@ -268,6 +268,6 @@
 .password-form {
   h2 {
     font-size: $fs-14;
-    margin-bottom: 20px;
+    margin-bottom: $s-20;
   }
 }
