:bug: Fix missing empty message on swap panel

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/component.scss
@@ -216,6 +216,11 @@
       height: $s-16;
     }
 
+    .component-list-empty {
+      @include titleTipography;
+      margin: 0 $s-4 0 $s-8;
+    }
+
     .component-list {
       margin: 0 $s-4 0 $s-8;
       .component-item {
