:sparkles: Improve design of input fields

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -151,6 +151,7 @@
   --input-foreground-color-disabled: var(--color-foreground-secondary);
   --input-border-color-disabled: var(--color-background-quaternary);
   --input-border-color-error: var(--error-color);
+  --input-border-color-success: var(--color-accent-primary);
   --input-details-color: var(--color-background-primary);
   --input-checkbox-background-color-rest: var(--color-background-quaternary);
   --input-checkbox-border-color-active: var(--color-background-quaternary);
