--- a/frontend/resources/styles/common/refactor/themes/default-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/default-theme.scss
@@ -4,6 +4,8 @@
 //
 // Copyright (c) KALEIDOS INC
 
+@use "sass:meta";
+
 :root {
   --color-background-primary: var(--dark-gray-1);
   --color-background-secondary: var(--dark-gray-2);
@@ -25,4 +27,6 @@
   --pending-color: var(--dark-pending-color);
   --error-color: var(--dark-error-color);
   --canvas-color: var(--color-canvas);
+
+  @include meta.load-css("hljs-dark-theme");
 }
