--- a/frontend/src/app/main/ui/components/code_block.scss
+++ b/frontend/src/app/main/ui/components/code_block.scss
@@ -7,8 +7,10 @@
 @import "refactor/common-refactor.scss";
 
 .code-display {
+  user-select: text;
   border-radius: $br-8;
   margin-top: $s-8;
   padding: $s-12;
   background-color: var(--menu-background-color);
+  overflow: auto;
 }
