--- a/frontend/src/app/main/ui/viewer/inspect/right_sidebar.scss
+++ b/frontend/src/app/main/ui/viewer/inspect/right_sidebar.scss
@@ -9,11 +9,13 @@
 .settings-bar-right {
   min-width: $s-252;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: relative;
   left: unset;
   right: unset;
   grid-area: right-sidebar;
+  padding-top: $s-8;
+  padding-left: $s-12;
   .tool-windows {
     height: 100%;
     display: flex;
@@ -64,9 +66,11 @@
       padding: $s-8 $s-24;
     }
   }
-
   .inspect-content {
     flex: 1;
     overflow: hidden;
+  }
+  &.viewer-code {
+    height: calc(100vh - $s-48);
   }
 }
