:lipstick: Add new UI to viewer area

--- a/frontend/src/app/main/ui/export.scss
+++ b/frontend/src/app/main/ui/export.scss
@@ -161,7 +161,7 @@
               height: $s-24;
               width: $s-24;
               padding: 0;
-              .checkbox-icon2 {
+              .checkobox-tick {
                 @extend .checkbox-icon;
               }
             }
