--- a/frontend/src/app/main/ui/dashboard/placeholder.scss
+++ b/frontend/src/app/main/ui/dashboard/placeholder.scss
@@ -10,9 +10,7 @@
 .grid-empty-placeholder {
   border-radius: $br-12;
   display: grid;
-  padding: $s-12;
-  margin-right: $s-12;
-  height: $s-232;
+  padding: $s-12 0;
 
   &.loader {
     justify-items: center;
