--- a/frontend/src/app/main/ui/components/forms.scss
+++ b/frontend/src/app/main/ui/components/forms.scss
@@ -31,6 +31,7 @@
       margin-top: 0;
       width: 100%;
       height: 100%;
+      padding: 0 $s-16;
 
       &:focus {
         outline: none;
@@ -82,7 +83,7 @@
   position: relative;
   width: var(--input-width, calc(100% - $s-1));
   min-width: var(--input-min-width);
-  height: var(--input-height, $s-32);
+  height: var(--input-height, $s-40);
 }
 
 .help-icon {
