:sparkles: Add help button to flex options

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/layout_container.scss
@@ -65,6 +65,14 @@
     .forth-row {
       @include flexColumn;
     }
+    .help-button-wrapper {
+      position: relative;
+      .help-button {
+        position: absolute;
+        top: 0;
+        right: 0;
+      }
+    }
   }
 }
 
