--- a/frontend/src/app/main/ui/components/radio_buttons.scss
+++ b/frontend/src/app/main/ui/components/radio_buttons.scss
@@ -40,6 +40,7 @@
   &.checked {
     border: none;
     background-color: var(--radio-btn-background-color-selected);
+    box-shadow: var(--radio-button-box-shadow);
     svg {
       stroke: var(--radio-btn-foreground-color-selected);
     }
