--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -24,6 +24,7 @@
     height: 100%;
     min-height: $s-32;
     color: var(--title-foreground-color);
+    overflow: hidden;
   }
   .title-only {
     margin-left: $s-8;
@@ -36,6 +37,7 @@
     padding: 0;
     color: var(--title-foreground-color);
     stroke: var(--title-foreground-color);
+    overflow: hidden;
     .toggle-btn {
       @include buttonStyle;
       display: flex;
@@ -44,6 +46,7 @@
       padding: 0;
       color: var(--title-foreground-color);
       stroke: var(--title-foreground-color);
+      overflow: hidden;
       .collapsabled-icon {
         @include flexCenter;
         height: $s-24;
