:bug: Add padding to inspect help

--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/interactions.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/interactions.scss
@@ -25,6 +25,7 @@
     }
 
     .help-content {
+      padding: $s-20;
       .help-group {
         margin-bottom: $s-40;
         .interactions-help-icon {
