--- a/frontend/src/app/main/ui/viewer/inspect/code.scss
+++ b/frontend/src/app/main/ui/viewer/inspect/code.scss
@@ -17,45 +17,51 @@
     }
   }
   .code-block {
+    font-size: $fs-14;
     padding: 0 $s-4 $s-8 0;
-    .code-row-lang {
-      display: flex;
-      justify-content: space-between;
-      gap: $s-4;
-      width: 100%;
-      .code-lang {
-        @include tabTitleTipography;
-        display: flex;
-        align-items: center;
-      }
-      .action-btns {
-        display: flex;
-        gap: $s-4;
-        flex: 1;
-        justify-content: end;
-        .expand-button {
-          @extend .button-tertiary;
-          height: $s-32;
-          width: $s-28;
-          svg {
-            @extend .button-icon;
-            stroke: var(--icon-foreground);
-          }
-        }
-      }
 
-      .code-lang-select {
-        @include tabTitleTipography;
-        width: $s-92;
-        border: $s-1 solid transparent;
-        background-color: transparent;
-        color: var(--menu-foreground-color-disabled);
+    pre {
+      border-radius: $br-8;
+      border: $s-1 solid $db-secondary;
+      padding: $s-16;
+    }
+  }
+
+  .code-row-lang {
+    display: flex;
+    justify-content: space-between;
+    gap: $s-4;
+    width: 100%;
+  }
+  .code-lang {
+    @include tabTitleTipography;
+    display: flex;
+    align-items: center;
+  }
+  .action-btns {
+    display: flex;
+    gap: $s-4;
+    flex: 1;
+    justify-content: end;
+    .expand-button {
+      @extend .button-tertiary;
+      height: $s-32;
+      width: $s-28;
+      svg {
+        @extend .button-icon;
+        stroke: var(--icon-foreground);
       }
     }
-
-    .code-row-display {
-      margin-bottom: $s-8;
-    }
+  }
+  .code-lang-select {
+    @include tabTitleTipography;
+    width: $s-72;
+    border: $s-1 solid transparent;
+    background-color: transparent;
+    color: var(--menu-foreground-color-disabled);
+  }
+  .code-row-display {
+    margin-bottom: $s-8;
   }
 }
 
